deploy/manifest/client/013-client-Ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: client
spec:
  rules:
    - host: client-mtls.apps-crc.testing
      http:
        paths:
          - path: /hello-client
            backend:
              serviceName: client
              servicePort: 8080
